--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
+      integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>Joseph Smith Corporacíon</title>
   </head>
@@ -79,16 +81,21 @@
           </div>
           <div class="libros">
             <div class="libro"
-              
+              title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover" data-content="Some content"
             >
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content"
+            >
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
           </div>
         </div>
@@ -99,15 +106,20 @@
             <button type="button" class="btn btn-primary">Ver Mas</button>
           </div>
           <div class="libros">
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
-            <div class="libro">
+            <div class="libro"
+            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
             </div>
           </div>
         </div>
@@ -119,15 +131,20 @@
           <button type="button" class="btn btn-primary">Ver Mas</button>
         </div>
         <div class="libros">
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
         </div>
       </div>
@@ -138,15 +155,20 @@
           <button type="button" class="btn btn-primary">Ver Mas</button>
         </div>
         <div class="libros">
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
-          <div class="libro">
+          <div class="libro"
+          title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
           </div>
         </div>
       </div>
@@ -159,9 +181,17 @@
     </div>
     <!----"/footer"---->
     <!-- Optional JavaScript -->
+      <script>
+        $(document).ready(function () {
+          $('[data-toggle="popover"]').popover();
+        });
+      </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+          integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+          integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+          integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
 </html>
