cambio de logo  y parte del css

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!----"jumbotron "---->
       <div class="jumbotron jumbotron-fluid">
           <div class="container">
-            <img class="logo" src="media/img/logo-blanco.svg" alt="">
+            <img class="logo" src="media/img/jscorpw.svg" alt="">
           </div>
       </div>
     <!----"/jumbotron"---->
@@ -86,21 +86,22 @@
               title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover" data-content="Some content"
             >
             </div>
-            <div class="libro"
-            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content"
-            >
-            </div>
-            <div class="libro" title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
-            </div>
-            <div class="libro"
-            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
-            </div>
-            <div class="libro"
-            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
-            </div>
-            <div class="libro"
-            title="Header" data-toggle="popover" data-trigger="hover" data-content="Some content">
-            </div>
+                <div class="libro" title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover"
+                  data-content="Some content">
+                </div>
+                    <div class="libro" title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover"
+                      data-content="Some content">
+                    </div>
+                        <div class="libro" title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover"
+                          data-content="Some content">
+                        </div>
+                            <div class="libro" title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover"
+                              data-content="Some content">
+                            </div>
+                                <div class="libro" title="La Fe Precede Al Milagro " data-toggle="popover" data-trigger="hover"
+                                  data-content="Some content">
+                                </div>
+                                
           </div>
         </div>
         <!----"Livros Traducidos"---->
@@ -188,7 +189,7 @@
     <!----"//biblioteca"---->
     <!----"footer"---->
     <div class="container footer">
-      <img src="media/img/logo-negro.png" alt="">
+      <img class="logo-negro" src="media/img/jscorp.svg" alt="">
       <h5>CorreoGenerico@algo.com</h5>
     </div>
     <!----"/footer"---->
