--- a/libro.html
+++ b/libro.html
@@ -54,28 +54,9 @@
         </div>
     </nav>
     <!----"/menu"---->
-    <!----"catalogo"---->
+    <!----"libro"---->
     <div class="container">
-        <h2 class="m-auto titulo">Libros Propios</h2>
-        <div class="book">
-            <div class="portada">
-                <img class="font-book" src="media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg" alt="">
-            </div>
-            <div class="contenido">
-                <h3 class="title">
-                    El Milagro del perdon
-                </h3>
-                <h4 class="autor">Spencer W. Kimball</h4>
-                <p>Lorem ipsum dolor 
-                    sit amet consectetur adipisicing elit. Rem 
-                    mollitia maiores ipsum a alias dolorum ut 
-                    provident expedita accusantium, ad nihil
-                    repellendus eveniet, repudiandae dicta magni 
-                    nisi ratione minima nulla!</p>
-                <a href="#">Ver Mas</a>
-            </div>
-        </div>
-        <div class="book">
+         <div class="book">
             <div class="portada">
                 <img class="font-book" src="media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg" alt="">
             </div>
@@ -90,81 +71,8 @@
                     provident expedita accusantium, ad nihil
                     repellendus eveniet, repudiandae dicta magni
                     nisi ratione minima nulla!</p>
-                <a href="#">Ver Mas</a>
             </div>
-        </div>
-        <div class="book">
-            <div class="portada">
-                <img class="font-book" src="media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg" alt="">
-            </div>
-            <div class="contenido">
-                <h3 class="title">
-                    El Milagro del perdon
-                </h3>
-                <h4 class="autor">Spencer W. Kimball</h4>
-                <p>Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Rem
-                    mollitia maiores ipsum a alias dolorum ut
-                    provident expedita accusantium, ad nihil
-                    repellendus eveniet, repudiandae dicta magni
-                    nisi ratione minima nulla!</p>
-                <a href="#">Ver Mas</a>
-            </div>
-        </div>
-        <div class="book">
-            <div class="portada">
-                <img class="font-book" src="media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg" alt="">
-            </div>
-            <div class="contenido">
-                <h3 class="title">
-                    El Milagro del perdon
-                </h3>
-                <h4 class="autor">Spencer W. Kimball</h4>
-                <p>Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Rem
-                    mollitia maiores ipsum a alias dolorum ut
-                    provident expedita accusantium, ad nihil
-                    repellendus eveniet, repudiandae dicta magni
-                    nisi ratione minima nulla!</p>
-                <a href="#">Ver Mas</a>
-            </div>
-        </div>
-        <div class="book">
-            <div class="portada">
-                <img class="font-book" src="media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg" alt="">
-            </div>
-            <div class="contenido">
-                <h3 class="title">
-                    El Milagro del perdon
-                </h3>
-                <h5 class="autor">Spencer W. Kimball</h5>
-                <p>Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Rem
-                    mollitia maiores ipsum a alias dolorum ut
-                    provident expedita accusantium, ad nihil
-                    repellendus eveniet, repudiandae dicta magni
-                    nisi ratione minima nulla!</p>
-                <a href="#">Ver Mas</a>
-            </div>
-        </div>
-        <div class="book">
-            <div class="portada">
-                <img class="font-book" src="media/img/d4583b81da55f3ac0cc8806a3d39f680.jpg" alt="">
-            </div>
-            <div class="contenido">
-                <h3 class="title">
-                    El Milagro del perdon
-                </h3>
-                <h4 class="autor">Spencer W. Kimball</h4>
-                <p>Lorem ipsum dolor
-                    sit amet consectetur adipisicing elit. Rem
-                    mollitia maiores ipsum a alias dolorum ut
-                    provident expedita accusantium, ad nihil
-                    repellendus eveniet, repudiandae dicta magni
-                    nisi ratione minima nulla!</p>
-                <a href="#">Ver Mas</a>
-            </div>
-        </div>
+         </div>
     </div>
     <!----"/catalogo"---->
     <!----"footer"---->
